<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/custom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp"
        android:text="@string/loginTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mainBlue" />

    <EditText
        android:id="@+id/loginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@color/mainBlue" />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/mainBlue" />

    <LinearLayout
        android:id="@+id/loginRemLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <CheckBox
            android:id="@+id/loginRemCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:text="@string/remember"
            android:textColor="@color/mainBlue" />
    </LinearLayout>

    <Button
        android:id="@+id/loginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/default_but"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>