<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_view"
    android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/filter"
            android:textColor="@color/mainBlue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/mainBlue" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/sdate"
                android:textColor="@color/mainBlue" />

            <EditText
                android:id="@+id/manDialogSdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:textColor="@color/mainBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/edate"
                android:textColor="@color/mainBlue" />

            <EditText
                android:id="@+id/manDialogEdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:textColor="@color/mainBlue" />
        </LinearLayout>

        <Button
            android:id="@+id/manDialogOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_but"
            android:padding="5dp"
            android:text="@string/done"
            android:textColor="@android:color/white" />
    </LinearLayout>